...
        uiState.endMinute
    )

    Box(
        modifier = Modifier
            .padding(16.dp)
            .testTag("create-activity-screen__main-container")
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .padding(16.dp)
                .verticalScroll(rememberScrollState())
...
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Center
        ) {

            Row {
                Text(
                    text = "Create event",
                    style = MaterialTheme.typography.displayMedium,
                    modifier = Modifier
                        .padding(vertical = 32.dp)
                        .testTag("create-event-screen__title"),
                    color = MaterialTheme.colorScheme.onPrimaryContainer
                )
            }

            CreateActivityNameAndDescriptionFields(
                createActivityViewModel = createEventViewModel
            )

            CreateDateTimeField(
                valueText = uiState.startDateTime,
                onValueChange = { createEventViewModel.updateStartDateTimeText(it) },
                labelText = "Start date and time (dd-mm-yyyy hh:mm)",
                onClickButton = { startDateTimePicker.show() }
            )

            CreateDateTimeField(
                valueText = uiState.endDateTime,
                onValueChange = { createEventViewModel.updateEndDateTimeText(it) },
                labelText = "End date and time (dd-mm-yyyy hh:mm)",
                onClickButton = { endDateTimePicker.show() }
            )

            CreateLatitudeAndLongitudeFields(
                createActivityViewModel = createEventViewModel
            )
...
    createEventViewModel: CreateEventViewModel
) {
    val uiState by createEventViewModel.uiState.collectAsState()
    Row(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("checkBoxRow"),
        horizontalArrangement = Arrangement.Start,
        verticalAlignment = Alignment.CenterVertically
    ) {
        Checkbox(
            checked = uiState.lateParticipationAllowed,
            onCheckedChange = { createEventViewModel.updateLateParticipationAllowed(it) },
            modifier = Modifier
                .testTag("lateParticipationAllowedCheckbox")
        )
        Text(
            text = "Allow late participation to this event",
            modifier = Modifier
                .testTag("lateParticipationAllowedText")
                .padding(8.dp)
        )
    }
}

/**
...
    createActivityViewModel: CreateEventViewModel
) {
    val uiState by createActivityViewModel.uiState.collectAsState()
    Row(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("pointsAwardedRow")
            .padding(8.dp),
        horizontalArrangement = Arrangement.SpaceBetween,
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(
            text = "This event awards",
            modifier = Modifier
                .testTag("pointsAwardedText")
                .padding(8.dp)
        )
        OutlinedTextField(
            value = uiState.pointsAwarded,
            onValueChange = { createActivityViewModel.updatePointsAwarded(it) },
            singleLine = true,
            modifier = Modifier
                .padding(vertical = 2.dp)
                .testTag("pointsAwardedField")
                .weight(1f)
        )
        Text(
            text = " points.",
            modifier = Modifier
                .testTag("pointsAwardedValueText")
                .padding(8.dp)
        )
    }

}
