...
            .fillMaxWidth(),
        supportingText = {
            Text(
                text = uiState.supportingTextName,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("nameSupport"),
                textAlign = TextAlign.End,
            )
        },
    )

    OutlinedTextField(
...
            .fillMaxWidth(),
        supportingText = {
            Text(
                text = uiState.supportingTextDescription,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("descriptionSupport"),
                textAlign = TextAlign.End
            )
        },
    )


...
