<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/futureWelcomeScreen"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="Item"
        app:showAsAction="always" />
</menu>